# guowang-pricing

./: .gitignore  README.md  docker-compose.yml  国网价格分在线测算系统-技术选型.md  国网价格分在线测算系统-需求文档V1.1.md  国网价格分在线测算系统-需求文档V1.2.md  国网价格分在线测算系统-需求文档V1.3.md  国网价格分在线测算系统.docx  国网价格分评分方式汇总.xlsx  国网报价算分模板全8套.xlsx  国网报价算分模板全8套v1.2.xlsx  测试1.xlsx
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  utils.py
backend/app/api/: auth_router.py  routes.py
backend/app/auth/: jwt.py  rate_limit.py
backend/app/db/: models.py  session.py
backend/app/schemas/: calculation.py  mappers.py
backend/app/services/: excel.py  records.py
backend/pricing_engine/: __init__.py  common.py  decimal_utils.py  models.py  registry.py
backend/pricing_engine/methods/: a01.py  a02.py  a03.py  a04.py  a05.py  a06.py  a07.py  a08.py
backend/tests/: test_excel_flow.py  test_excel_template_parity.py  test_multi_sheet.py  test_pricing_engine.py  test_records.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  styles.css
frontend/src/api/: auth.ts  pricing.ts  requirements.ts
frontend/src/components/: MultiSheetCalculator.vue
frontend/src/pages/: LoginPage.vue  RequirementsPage.vue
frontend/src/stores/: auth.ts  calculator.ts
frontend/src/utils/: helpers.ts
